# src/api/models/WeatherWarning.ts
@@ -1,0 +1,56 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * WeatherApi
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+/**
+ * 
+ * @export
+ */
+export const WeatherWarning = {
+    NUMBER_0: 0,
+    NUMBER_1: 1,
+    NUMBER_2: 2,
+    NUMBER_3: 3,
+    NUMBER_4: 4
+} as const;
+export type WeatherWarning = typeof WeatherWarning[keyof typeof WeatherWarning];
+
+
+export function instanceOfWeatherWarning(value: any): boolean {
+    for (const key in WeatherWarning) {
+        if (Object.prototype.hasOwnProperty.call(WeatherWarning, key)) {
+            if (WeatherWarning[key as keyof typeof WeatherWarning] === value) {
+                return true;
+            }
+        }
+    }
+    return false;
+}
+
+export function WeatherWarningFromJSON(json: any): WeatherWarning {
+    return WeatherWarningFromJSONTyped(json, false);
+}
+
+export function WeatherWarningFromJSONTyped(json: any, ignoreDiscriminator: boolean): WeatherWarning {
+    return json as WeatherWarning;
+}
+
+export function WeatherWarningToJSON(value?: WeatherWarning | null): any {
+    return value as any;
+}
+
+export function WeatherWarningToJSONTyped(value: any, ignoreDiscriminator: boolean): WeatherWarning {
+    return value as WeatherWarning;
+}
+
