# src/api/models/index.ts
@@ -3,3 +3,4 @@
 export * from './FestivalDto';
 export * from './ProblemDetails';
 export * from './WeatherDataDto';
+export * from './WeatherWarning';
