# swagger.json
@@ -164,8 +164,8 @@
         "type": "object",
         "properties": {
           "id": {
-            "type": "integer",
-            "format": "int32"
+            "type": "string",
+            "nullable": true
           },
           "name": {
             "type": "string",
@@ -175,7 +175,23 @@
             "type": "string",
             "nullable": true
           },
+          "time": {
+            "type": "string",
+            "nullable": true
+          },
           "location": {
+            "type": "string",
+            "nullable": true
+          },
+          "lat": {
+            "type": "number",
+            "format": "double"
+          },
+          "lng": {
+            "type": "number",
+            "format": "double"
+          },
+          "description": {
             "type": "string",
             "nullable": true
           }
@@ -231,9 +247,23 @@
           "precipitation": {
             "type": "number",
             "format": "double"
+          },
+          "warning": {
+            "$ref": "#/components/schemas/WeatherWarning"
           }
         },
         "additionalProperties": false
+      },
+      "WeatherWarning": {
+        "enum": [
+          0,
+          1,
+          2,
+          3,
+          4
+        ],
+        "type": "integer",
+        "format": "int32"
       }
     }
   }
